--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -20,9 +20,9 @@ projects:
   autoplan:
     when_modified: ["*.tf", "../modules/**/*.tf", ".terraform.lock.hcl"]
     enabled: true
-  plan_requirements: [mergeable, approved, undiverged]
-  apply_requirements: [mergeable, approved, undiverged]
-  import_requirements: [mergeable, approved, undiverged]
+  plan_requirements: [approved, undiverged]
+  apply_requirements: [approved, undiverged]
+  import_requirements: [approved, undiverged]
   silence_pr_comments: ["apply"]
   execution_order_group: 1
   depends_on:
